--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,10 @@
 <body>
 	{% include header.html %}
 	{%- if page.category != "jekyll update" -%}
+	{%- if page.title != "Blog" -%}
 	{%- if page.title -%}
 	<div class="page-title"><h2>{{ page.title }}</h2></div>
+	{%- endif -%}
 	{%- endif -%}
 	{%- endif -%}
 	{{ content }}
