--- a/_sass/my-theme/_layout.scss
+++ b/_sass/my-theme/_layout.scss
@@ -1,6 +1,5 @@
 body, html {
 margin: 0;
-min-height: 100vh;
 }
 
 .page-title {
@@ -11,16 +10,39 @@ margin-right: 20%;
 background-color: #ffffff;
 }
 
-.page {
-position: relative;
-min-height: 100vh;
-}
-
 .home {
 position: relative;
 min-width: 100%;
 background-color: #ffffff;
 z-index: 2;
+}
+
+.active-tag-filters {
+p {
+margin-top: 10px;
+margin-left: 7px;
+}
+ul {
+	margin-left: -21px;
+}
+position: fixed;
+top: 65px;
+left: 10px;
+width: 18vw;
+height: 18vw;
+border: solid;
+border-width: 1px;
+border-color: darken(#dfdfdf,10%);
+line-height: 7px;
+}
+
+#tag {
+border:solid;
+border-width:1px;
+border-color:#dfdfdf;
+background-color:#dfdfdf;
+border-radius:5px;
+padding:2px;
 }
 
 .bar1 {
@@ -53,7 +75,7 @@ background-size: 98vw;
 
 .page-content {
 position: relative;
-min-height: 59vh;
+min-height: 100vh;
 padding-top: 2vh;
 margin-left: 20%;
 margin-right: 20%;
