Page title changes to reflect selected tag

--- a/_sass/my-theme/_layout.scss
+++ b/_sass/my-theme/_layout.scss
@@ -107,7 +107,7 @@ z-index: 1;
 
 @media screen and (max-width: 800px) {
 .page, .page-content, .page-title {
-margin: 0px;
+margin: 1%;
 width: 98%; /* The width is 98%, when the viewport is 800px or smaller */
 }
 .parallax {
