--- a/_includes/header.html
+++ b/_includes/header.html
@@ -37,7 +37,7 @@
             {%- endfor -%}
           </ul>
         </li>
-        <!-- populate Tools dropdown -->
+        <!-- populate Tools dropdown
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Tools
@@ -53,7 +53,7 @@
             {%- endfor -%}
             {%- endif -%}
           </ul>
-        </li>
+        </li>-->
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
