--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,15 @@ layout: default
 <div class="post">
 	<div class="page-content">
 		<h1 class="post-title">{{ page.title }}</h1>
-		<a class="metaData" style="font-size: 85%; line-height: 85%;">{{ post.date | date: date_format }} {%- if post.author -%} — {{ post.author }} {%- endif -%}</a>
+		<a class="metaData" style="font-size: 85%; line-height: 85%;">{{ page.date | date: date_format }} {%- if page.author -%} — {{ page.author }} {%- endif -%}</a>
 		{{ content }}
+		<div class="tag-container" style="display: inline; font-size: 85%; color: #777;"> 
+			{% if page.tags.size > 0 %}
+			tags: 
+			{% for tag in page.tags %}
+			<span id="tag" value="{{ tag }}"><a href="/blog/">{{ tag }}</a></span><a> </a>
+			{% endfor %}
+			{% endif %}
+		</div>
 	</div>
 </div>
