--- a/_sass/my-theme/_layout.scss
+++ b/_sass/my-theme/_layout.scss
@@ -44,6 +44,10 @@ border-width: 1px;
 border-color: #dfdfdf;
 }
 
+.page-title {
+	display: none;
+}
+
 .postCover {
 background-color: #efefef;
 border-style: solid;
@@ -60,7 +64,7 @@ background-size: 98vw;
 .page-content {
 position: relative;
 min-height: 100vh;
-padding-top: 2vh;
+padding-top: 3vh;
 margin-left: 20%;
 margin-right: 20%;
 background-color: #ffffff;
@@ -100,7 +104,7 @@ background-repeat: no-repeat;
 background-size: 98vw;
 .caption {
 position: fixed;
-top: 31vw;
+top: 30.75vw;
 right: 10px;
 text-align: right;
 color: #777;
