--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,8 +9,8 @@
       <div class="col-sm-3 py-2">
         <h4 id="divnks" style="margin-top: 28px;">useful links</h4>
         <div><a href="#">Common Questions</a></div>
+        <div><a href="/contact/">Contact</a></div>
         <div><a href="#">Help</a></div>
-        <div><a href="#">Mobile Version</a></div>
       </div>
       <div class="col-sm-3 py-2">
         <h4 id="more divnks" style="margin-top: 28px;">tutorials</h4>
