--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,9 @@ layout: default
 ---
 
 <div class="background">
-	<div class="parallax">
-		<div class="caption">
-			Population density coropleth of Tennessee made with data from the Census API.
-		</div>
+	<div class="parallax"></div>
+	<div class="caption">
+		<span>Population density coropleth of Tennessee made with data from the Census API.</span>
 	</div>
 </div>
 <div class="bar1"></div>
