--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{%- assign date_format = site.minima.date_format | default: "%-d %b %Y " -%}
+{%- assign date_format = site.date_format | default: "%-d %b %Y " -%}
 
 
 <div class="postCover" style='background-image: url("{{ page.cover }}")'></div>
