--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
       
       <div class="col-sm-4 py-2">
         <h4 id="census-docs" style="margin-top: 28px; color: #f8f8f9;">census-docs</h4>
-        <p>This website documents resources, issues, and best-practices related to the US Census API.</p>
+        <p>A website dedicated to documenting best-practices, tools, and issues related to the U.S. Census Bureau's APIs.</p>
       </div>
       <div class="col-sm-3 py-2">
         <h4 id="divnks" style="margin-top: 28px;">useful links</h4>
