--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,5 @@
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
 	<!-- Other SCC -->
-	<link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+	<link rel="stylesheet" href="{{ "/stylesheets/main.css" | relative_url }}">
 </head>
