--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,22 +15,24 @@
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- if my_page.title -%}
         {%- if my_page.role == null -%}
+        {%- if my_page.title != my_page.tag -%}
         <li class="nav-item">
           <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
         </li>
+        {%- endif -%}
         {%- endif -%}
         {%- endif -%}
         {%- endfor -%}
         <!-- populate Resources dropdown -->
         <li class="nav-item dropdown">
           <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Resources
+            Tools
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
-            {%- if my_page.role == 'resource' -%}
+            {%- if my_page.role == 'tool' -%}
             <a class="dropdown-item" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
             {%- endif -%}
