--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {%- assign date_format = site.date_format | default: "%-d %b %Y " -%}
+{% capture custom_title %}Posts Tagged: {{ page.tag }}{% endcapture %}
 
 {% include title.html %}
 <div class="page">
@@ -11,7 +12,7 @@ layout: default
 		{{ content }}
 		<div class="container">
 			<div class="row posts">
-				{% for post in site.posts %}
+				{% for post in site.tags[page.tag] %}
 				<div class="{% for tag in post.tags %}{{ tag }} {% endfor %}col-sm-12 py-2">
 					<div id="post" class="card h-100 card-body">
 						{%- if post.cover -%}
