--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,24 +5,20 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       {%- assign default_paths = site.pages | map: "path" -%}
       {%- assign page_paths = site.header_pages | default: default_paths -%}
-      <ul class="navbar-nav mr-auto sticky-top">
+      <ul class="navbar-nav sticky-top d-flex w-50 mr-auto">
         <li class="nav-item active">
           <a class="nav-link" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}<span class="sr-only">(current)</span></a>
         </li>
         {%- if page_paths -%}
         <!-- populate navbar -->
         {%- for path in page_paths -%}
-        {%- assign my_page = site.pages | where: "path", path | first -%}
-        {%- if my_page.title -%}
-        {%- if my_page.role == null -%}
-        {%- if my_page.title != my_page.tag -%}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-        </li>
-        {%- endif -%}
-        {%- endif -%}
-        {%- endif -%}
-        {%- endfor -%}
+          {%- assign my_page = site.pages | where: "path", path | first -%}
+            {%- if (my_page.title) and (my_page.title != my_page.tag) and (my_page.title != "About") and (my_page.title != "Contact") and (my_page.title != "Blog") and (my_page.role != "tool") -%}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+              </li>
+            {%- endif -%}
+        {% endfor %}
         <!-- populate Resources dropdown -->
         <li class="nav-item dropdown">
           <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -30,20 +26,29 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            {%- if my_page.role == 'tool' -%}
-            <a class="dropdown-item" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-            {%- endif -%}
-            {%- endfor -%}
+              {%- assign my_page = site.pages | where: "path", path | first -%}
+              {%- if (my_page.title) and (my_page.role == "tool") -%}
+                <a class="dropdown-item" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+              {%- endif -%}
+            {% endfor %}
           </ul>
         </li>
         {%- endif -%}
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+      <ul class="nav navbar-nav ml-auto sticky-top w-65 justify-content-end">
+        {%- for path in page_paths -%}
+            {%- assign my_page = site.pages | where: "path", path | first -%}
+            {%- if (my_page.title) and ((my_page.title == "Contact") or (my_page.title == "Blog")) -%}
+              <li class="nav-item">
+                <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+              </li>
+            {% endif %}
+        {% endfor %}
+        </li>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </ul>
     </div>
 </header>
