--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,8 +1,14 @@
-{% if custom_title %}
-{% assign title = custom_title %}
+{% comment %}
+pass title.html your page title
+{% include title.html title=title %}
+{% endcomment %}
+
+{% if include.title %}
+{% assign title = include.title %}
 {% else %}
 {% assign title = page.title %}
 {% endif %}
+
 <div class="page-title">
 	<h2>{{ title }}</h2>
 </div>
