sidebar navigation works now

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,6 @@
 
 	<!-- Other SCC -->
 	<link rel="stylesheet" href="{{ "/stylesheets/main.css" | relative_url }}">
+
+	<script src="/scripts/main.js"></script>
 </head>
