changed contact information

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,15 +21,12 @@
       <div class="col-sm-2 py-2">
         <h4 id="social" style="margin-top: 28px; margin-left: 4px;">social</h4>
         <div class="social social-r1">
-          <a class="btn btn-social-icon btn-envelope-o" href="mailto:census.docs.info@metroideas.org">
+          <a class="btn btn-social-icon btn-envelope-o" href="mailto:sdesigns.contact@gmail.com">
             <span class="fa fa-envelope-o" style="color: #efefef;" aria-hidden="true"></span>
-          </a>
-          <a class="btn btn-social-icon btn-facebook-o" href="https://censusdocs.facebook.com">
-            <span class="fa fa-facebook" style="color: #efefef;" aria-hidden="true"></span>
           </a>
         </div>
         <div class="social social-r2">
-          <a class="btn btn-social-icon btn-linkedin-o" href="https://censusdocs.linkedin.com">
+          <a class="btn btn-social-icon btn-linkedin-o" href="https://www.linkedin.com/in/nathan-sheppard-5260765b/">
             <span class="fa fa-linkedin" style="color: #efefef;" aria-hidden="true"></span>
           </a>
           <a class="btn btn-social-icon btn-twitter-o" href="https://censusdocs.twitter.com">
