--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -9,7 +9,7 @@ layout: default
 		    {{ content }}
 		    <div class="row">
 		        <div class="col-md-12 py-1">
-		            <form id="contact-form" name="contact-form" action="https://formspree.io/nathan@metroideas.org" method="POST">
+		            <form id="contact-form" name="contact-form" action="https://formspree.io/sdesigns.contact@gmail.com" method="POST">
 		                <div class="row">
 		                    <div class="col-md-6">
 		                        <div class="md-form mb-0">
