changed contact information

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,9 @@
           <a class="btn btn-social-icon btn-envelope-o" href="mailto:sdesigns.contact@gmail.com">
             <span class="fa fa-envelope-o" style="color: #efefef;" aria-hidden="true"></span>
           </a>
+          <a class="btn btn-social-icon btn-github-o" href="https://www.github.com/shepnathand">
+            <span class="fa fa-github-o"  style="color: #efefef;" aria-hidden="true"></span>
+          </a>
         </div>
         <div class="social social-r2">
           <a class="btn btn-social-icon btn-linkedin-o" href="https://www.linkedin.com/in/nathan-sheppard-5260765b/">
