--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
             <span class="fa fa-envelope-o" style="color: #efefef;" aria-hidden="true"></span>
           </a>
           <a class="btn btn-social-icon btn-github-o" href="https://www.github.com/shepnathand">
-            <span class="fa fa-github-o"  style="color: #efefef;" aria-hidden="true"></span>
+            <span class="fa fa-github"  style="color: #efefef;" aria-hidden="true"></span>
           </a>
         </div>
         <div class="social social-r2">
