--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,10 @@ layout: default
 
 {%- assign date_format = site.date_format | default: "%-d %b %Y " -%}
 
+{% if page.cover %}
+	<div class="postCover" style='background-image: url("{{ page.cover }}")'></div>
+{% endif %}
 
-<div class="postCover" style='background-image: url("{{ page.cover }}")'></div>
 <div class="post">
 	<div class="page-content">
 		<h1 class="post-title">{{ page.title }}</h1>
