added creative commons license

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,16 +7,13 @@
         <p>A website dedicated to documenting best-practices, tools, and issues related to the U.S. Census Bureau's APIs.</p>
       </div>
       <div class="col-sm-3 py-2">
-        <h4 id="divnks" style="margin-top: 28px;">useful links</h4>
-        <div><a href="#">Common Questions</a></div>
-        <div><a href="/contact/">Contact</a></div>
-        <div><a href="#">Help</a></div>
-      </div>
-      <div class="col-sm-3 py-2">
-        <h4 id="more divnks" style="margin-top: 28px;">tutorials</h4>
+        <h4 id="more links" style="margin-top: 28px;">tutorials</h4>
         <div><a href="http://www.mooreds.com/wordpress/archives/963">Quick start</a></div>
         <div><a href="https://data.library.virginia.edu/using-census-data-api-with-r/">Using R to make a request</a></div>
         <div><a href="https://source.opennews.org/articles/finding-stories-census-data/">Finding a story</a></div>
+      </div>
+      <div class="col-sm-3 py-2">
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0; margin-top: 28px;" src="https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">census-docs</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://adoring-wozniak-fc7a12.netlify.com/" property="cc:attributionName" rel="cc:attributionURL">Nathan Sheppard</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
       </div>
       <div class="col-sm-2 py-2">
         <h4 id="social" style="margin-top: 28px; margin-left: 4px;">social</h4>
