--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,11 +44,22 @@
               </li>
             {% endif %}
         {% endfor %}
-        </li>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </ul>
+        <div id="top">
+          <div id="topcr">
+            <script>
+              (function() {
+                var cx = '016024489793465648841:1cmhhjqwjre';
+                var gcse = document.createElement('script');
+                gcse.type = 'text/javascript';
+                gcse.async = true;
+                gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(gcse, s);
+              })();
+            </script>
+            <gcse:search></gcse:search>
+          </div>
+        </div>
     </div>
 </header>
