--- a/_includes/maps/population.html
+++ b/_includes/maps/population.html
@@ -2,7 +2,7 @@
 	<div>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="/stylesheets/maps.css">
-		<title>65+ Living Alone</title>
+		<title>Population</title>
 		<meta name="Test" content="stuff" author="Nathan Sheppard" version="20191102">
 		<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js'></script>
 		<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' />
@@ -13,8 +13,8 @@
 		<div id='map-ui'>
 		</div>
 		<div id='map'></div>
-		<div class='map-overlay' id='features'><h2>People Over 64 Who are Living Alone</h2><div id='pd'><p>Hover over a tract!</p></div></div>
+		<div class='map-overlay' id='features'><h2>Population</h2><div id='pd'><p>Hover over a tract!</p></div></div>
 		<div class='map-overlay' id='legend'></div>
-		<script src='/scripts/over-64-living-alone/map.js'></script>
+		<script src='/scripts/population/map.js'></script>
 	</div>
 </div>
