--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@
           <a class="btn btn-social-icon btn-linkedin-o" href="https://www.linkedin.com/in/nathan-sheppard-5260765b/">
             <span class="fa fa-linkedin" style="color: #efefef;" aria-hidden="true"></span>
           </a>
-          <a class="btn btn-social-icon btn-twitter-o" href="https://censusdocs.twitter.com">
+          <a class="btn btn-social-icon btn-twitter-o" href="https://twitter.com/CensusDocs">
             <span class="fa fa-twitter" style="color: #efefef;" aria-hidden="true"></span>
           </a>
         </div>
