--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
       <div class="col-sm-2 py-2">
         <h4 id="social" style="margin-top: 28px; margin-left: 4px;">social</h4>
         <div class="social social-r1">
-          <a class="btn btn-social-icon btn-envelope-o" href="mailto:sdesigns.contact@gmail.com">
+          <a class="btn btn-social-icon btn-envelope-o" href="mailto:censusdocs@gmail.com">
             <span class="fa fa-envelope-o" style="color: #efefef;" aria-hidden="true"></span>
           </a>
           <a class="btn btn-social-icon btn-github-o" href="https://www.github.com/shepnathand">
@@ -26,7 +26,7 @@
           </a>
         </div>
         <div class="social social-r2">
-          <a class="btn btn-social-icon btn-linkedin-o" href="https://www.linkedin.com/in/nathan-sheppard-5260765b/">
+          <a class="btn btn-social-icon btn-linkedin-o" href="https://www.linkedin.com/in/shepnathand/">
             <span class="fa fa-linkedin" style="color: #efefef;" aria-hidden="true"></span>
           </a>
           <a class="btn btn-social-icon btn-twitter-o" href="https://twitter.com/CensusDocs">
