--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
       {%- assign page_paths = site.header_pages | default: default_paths -%}
       <ul class="navbar-nav sticky-top d-flex w-80 mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}<span class="sr-only">(current)</span></a>
+          <a class="nav-link" rel="author" href='{{ "/" | relative_url }}'>{{ site.title | escape }}<span class="sr-only">(current)</span></a>
         </li>
         {%- if page_paths -%}
         <!-- populate navbar -->
         {%- for path in page_paths -%}
           {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if "Blog Issues" contains (my_page.title) -%}
+            {%- if "Blog" contains (my_page.title) -%}
               <li class="nav-item">
                 <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
               </li>
