set the language and added the title

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang>
 {% include head.html %}
+<title>{{ page.title }}</title>
 <body>
 	{% include header.html %}
 	{{ content }}
