fixed page title and lang attribute

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang>
+<html lang="en">
 {% include head.html %}
-<title>{{ page.title }}</title>
+<title>census-docs | {{ page.title }}</title>
 <body>
 	{% include header.html %}
 	{{ content }}
