stopped using markdown

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,23 +1,23 @@
-<nav id="sidebar">
-	<div class="sidebar-header">
+<nav id="navbar">
+	<header class="sidebar-header">
 		<h3>Getting Started</h3>
-	</div>
+	</header>
 
 	<ul class="list-unstyled components">
 		<li>
-			<a href="#"><h4>What is an API?</h4></a>
+			<a href="#What_is_an_API?" class="nav-link"><h4>What is an API?</h4></a>
 		</li>
 		<li>
-			<a href="#"><h4>Why use the Census API</h4></a>
+			<a href="#Why_use_the_Census_API?" class="nav-link"><h4>Why use the Census API?</h4></a>
 		</li>
 		<li>
-			<a href="#"><h4>Getting Started</h4></a>
+			<a href="#Getting_Started" class="nav-link"><h4>Getting Started</h4></a>
 		</li>
 		<li>
-			<a href="#"><h4>Finding Data</h4></a>
+			<a href="#Finding_Data" class="nav-link"><h4>Finding Data</h4></a>
 		</li>
 		<li>
-			<a href="#"><h4>Downloading the Data</h4></a>
+			<a href="#Downloading_the_Data" class="nav-link"><h4>Downloading the Data</h4></a>
 			<a href="#httpRequestSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" style="padding-left:5%; font-size:100%;">HTTP Request</a>
 			<ul class="collapse list-unstyled" id="httpRequestSubmenu">
 				<li>
@@ -38,10 +38,10 @@
 			<a href="#"><h5>Python Census API Wraper</h5></a>
 		</li>
 		<li>
-			<a href="#"><h4>What's Next?</h4></a>
+			<a href="#What_Next?" class="nav-link"><h4>What Next?</h4></a>
 		</li>
 		<li>
-			<a href="#"><h4>Ready for More?</h4></a>
+			<a href="#Ready_for_More?" class="nav-link"><h4>Ready for More?</h4></a>
 		</li>
 	</ul>
 
