--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,9 +3,11 @@
 {% include head.html %}
 <title>census-docs | {{ page.title }}</title>
 <body>
-	{% include header.html %}
-	{{ content }}
-	{% include footer.html %}
-	{% include scripts.html %}
+	<main id="main-doc">
+		{% include nav.html %}
+		{{ content }}
+		{% include footer.html %}
+		{% include scripts.html %}
+	</main>
 </body>
 </html>
