--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<header class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -7,7 +7,7 @@
       {%- assign page_paths = site.header_pages | default: default_paths -%}
       <ul class="navbar-nav sticky-top d-flex w-80 mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" rel="author" href='{{ "/" | relative_url }}'>{{ site.title | escape }}<span class="sr-only">(current)</span></a>
+          <a class="navbar-link" rel="author" href='{{ "/" | relative_url }}'>{{ site.title | escape }}<span class="sr-only">(current)</span></a>
         </li>
         {%- if page_paths -%}
         <!-- populate navbar -->
@@ -15,13 +15,13 @@
           {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if "Blog" contains (my_page.title) -%}
               <li class="nav-item">
-                <a class="nav-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                <a class="navbar-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
               </li>
             {%- endif -%}
         {% endfor %}
         <!-- populate Resources dropdown -->
         <li class="nav-item dropdown">
-          <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <a id="navbarDropdown" class="navbar-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Tools
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,4 +36,4 @@
         {%- endif -%}
       </ul>
     </div>
-</header>
+</nav>
